--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    travel_dest = []\n",
-    "    for traveldes"
+    "    for traveldes in travel_destinations:\n",
+    "        tr"
    ]
   },
   {
