Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
     "def number_of_destinations():\n",
     "    travel_dest = []\n",
     "    for traveldes in travel_destinations:\n",
-    "        tr"
+    "        travel_dest.append(tr)"
    ]
   },
   {
