Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
     "def number_of_destinations():\n",
     "    travel_dest = []\n",
     "    for traveldes in travel_destinations:\n",
-    "        travel_dest.append(tr)"
+    "        travel_dest.append(traveldes)\n",
+    "        return trav"
    ]
   },
   {
