Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,8 @@
     "    travel_dest = []\n",
     "    for traveldes in travel_destinations:\n",
     "        travel_dest.append(traveldes)\n",
-    "        return trav"
+    "        return travel_dest\n",
+    "    "
    ]
   },
   {
