Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,10 +58,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():  \n",
-    "    numdes\n",
+    "    numdest = 0\n",
     "    for traveldes in travel_destinations:\n",
-    "        travel_dest.append(traveldes)\n",
-    "        return travel_dest\n",
+    "        numdest +=1\n",
     "    "
    ]
   },
