--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for idx in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations.capitaliz\n",
+    "        travel_destinations[i].capitalization()\n",
     "    \n",
     "    "
    ]
