Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for idx in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations[i].capitalization()\n",
+    "        travel_destinations[idx].capitalization()\n",
+    "        return\n",
     "    \n",
     "    "
    ]
