--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    for idx in list(range(0,len(travel_destinations))):\n",
     "        travel_destinations[idx].capitalization()\n",
-    "        return\n",
+    "        return travel_destinations\n",
     "    \n",
     "    "
    ]
