--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for idx in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations[idx] = travel_destinations[idx][0].upper() +\n",
+    "        travel_destinations[idx] = travel_destinations[idx][0].upper() + travel_destinations[idx][0]\n",
     "        return travel_destinations\n",
     "    \n",
     "    "
