--- a/index.ipynb
+++ b/index.ipynb
@@ -217,22 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for idx in list(range(0,len(travel_destinations))):\n",
-    "        travel_destinations[idx] = travel_destinations[idx][0].upper() + travel_destinations[idx][1:]\n",
-    "    return travel_destinations\n",
-    "    \n",
-    "    "
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +240,7 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +267,7 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia', 'Japan']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
